--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         [v-cloak] { display: none; }
-        body { background-color: #121212; color: #e5e7eb; -webkit-tap-highlight-color: transparent; font-family: sans-serif; }
+        body { background-color: #121212; color: #e5e7eb; -webkit-tap-highlight-color: transparent; font-family: -apple-system, system-ui, sans-serif; }
         .evergreen-gradient { background: linear-gradient(135deg, #059669 0%, #064e3b 100%); }
         .card-bg { background-color: #1e1e1e; border: 1px solid rgba(255,255,255,0.05); }
         .input-bg { background-color: #2d2d2d; border: 1px solid rgba(255,255,255,0.1); color: white; }
@@ -19,12 +19,8 @@
         .tab-inactive { background-color: #2d2d2d; color: #6b7280; }
         .whatsapp-bg { background-color: #25D366; color: white; }
         
-        /* 修復截圖文字被切斷的核心 CSS */
-        .item-title { 
-            line-height: 1.5 !important; 
-            padding-bottom: 2px;
-            letter-spacing: 0.025em; /* 增加一點字距防止重疊 */
-        }
+        /* 唯一的 CSS 修正：確保文字有足夠行高，防止截圖被切 */
+        .fix-text-crop { line-height: 1.4 !important; padding-bottom: 1px; }
     </style>
 </head>
 <body class="min-h-screen">
@@ -36,10 +32,10 @@
                 <i class="fas fa-bolt mr-1 text-yellow-400"></i>數神
             </h1>
             <div class="flex gap-2">
-                <button @click="showTextShare = true" class="bg-white/10 px-4 py-2 rounded-full border border-white/20 text-[10px] font-bold">
+                <button @click="showTextShare = true" class="bg-white/10 px-4 py-2 rounded-full border border-white/20 text-[10px] font-bold active:scale-95">
                     <i class="fas fa-align-left mr-1"></i> 文字Share
                 </button>
-                <button @click="generateImage" class="bg-white/20 px-4 py-2 rounded-full border border-white/30 text-[10px] font-bold">
+                <button @click="generateImage" class="bg-white/20 px-4 py-2 rounded-full border border-white/30 text-[10px] font-bold active:scale-95">
                     <i class="fas fa-camera mr-1"></i> 截圖Share
                 </button>
             </div>
@@ -47,7 +43,7 @@
     </header>
 
     <div class="p-4 space-y-6">
-        <section v-if="!isExporting" class="card-bg p-5 rounded-3xl">
+        <section v-if="!isExporting" class="card-bg p-5 rounded-3xl shadow-sm">
             <h2 class="font-bold text-emerald-500 mb-4 text-xs uppercase tracking-widest">1. 加入朋友</h2>
             <div class="flex gap-2 mb-4">
                 <input v-model="newUser" @keyup.enter="addUser" type="text" placeholder="名稱..." class="input-bg flex-1 p-3 rounded-2xl text-sm outline-none">
@@ -64,7 +60,7 @@
             <section v-if="expenses.length > 0" class="bg-emerald-950/20 border border-emerald-900/40 p-6 rounded-[32px] mb-6">
                 <div class="flex justify-between items-end mb-6">
                     <div>
-                        <h2 class="font-black text-emerald-500 text-xl">最終結算</h2>
+                        <h2 class="font-black text-emerald-500 text-xl tracking-tight">最終結算</h2>
                         <p class="text-[10px] text-gray-500">Settlement</p>
                     </div>
                     <div class="text-right font-mono font-bold text-emerald-500 text-lg">
@@ -85,10 +81,10 @@
             </section>
 
             <div v-if="expenses.length > 0" class="space-y-3">
-                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 relative">
+                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
                     <div class="flex-1 min-w-0 mr-4">
-                        <div class="item-title font-black text-sm text-gray-100 truncate">{{ exp.item }}</div>
-                        <div class="text-[10px] text-gray-500 mt-0.5">
+                        <div class="font-black text-sm text-gray-200 truncate fix-text-crop">{{ exp.item }}</div>
+                        <div class="text-[10px] text-gray-500 mt-1">
                             <b class="text-emerald-600 uppercase">{{ exp.payer }}</b> 付 {{ exp.currency }} {{ exp.amount }}
                         </div>
                     </div>
@@ -111,19 +107,33 @@
                         <option value="HKD">🇭🇰 HKD</option>
                         <option value="JPY">🇯🇵 JPY</option>
                         <option value="TWD">🇹🇼 TWD</option>
+                        <option value="CNY">🇨🇳 CNY</option>
                         <option value="THB">🇹🇭 THB</option>
+                        <option value="KRW">🇰🇷 KRW</option>
+                        <option value="USD">🇺🇸 USD</option>
+                        <option value="GBP">🇬🇧 GBP</option>
+                        <option value="EUR">🇪🇺 EUR</option>
                     </select>
-                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold">
+                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold outline-none">
                 </div>
+
+                <div v-if="form.currency !== 'HKD'" class="bg-black/20 p-4 rounded-2xl space-y-4 border border-white/5">
+                    <div class="flex rounded-xl overflow-hidden p-1 bg-black/40">
+                        <button @click="rateMode = 'live'" :class="rateMode === 'live' ? 'tab-active' : 'tab-inactive'" class="flex-1 py-2 text-[10px] font-bold rounded-lg">即時匯率</button>
+                        <button @click="rateMode = 'manual'" :class="rateMode === 'manual' ? 'tab-active' : 'tab-inactive'" class="flex-1 py-2 text-[10px] font-bold rounded-lg">自訂匯率</button>
+                    </div>
+                    <div class="text-center text-[10px] font-mono opacity-60">1 {{ form.currency }} = {{ (rateMode === 'live' ? currentRate : manualRate).toFixed(4) }} HKD</div>
+                </div>
+
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500">誰付款？</label>
+                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰付款？</label>
                         <select v-model="form.payer" class="input-bg w-full p-3 rounded-2xl text-sm outline-none">
                             <option v-for="u in users" :key="u" :value="u">{{ u }}</option>
                         </select>
                     </div>
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500">誰參與？</label>
+                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰參與？</label>
                         <div class="input-bg max-h-32 overflow-y-auto rounded-2xl p-3 text-[10px]">
                             <div v-for="u in users" :key="u" class="flex items-center gap-3 mb-2">
                                 <input type="checkbox" :value="u" v-model="form.involved" class="w-4 h-4 rounded accent-emerald-500">
@@ -132,21 +142,42 @@
                         </div>
                     </div>
                 </div>
-                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl text-sm">
+                
+                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl active:scale-95 transition-all text-sm uppercase tracking-widest">
                     {{ isEditing ? '儲存修改' : '確認記帳' }}
                 </button>
             </div>
         </section>
 
+        <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
+            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl">
+                <h3 class="font-black text-emerald-500 text-sm">文字結算</h3>
+                <textarea readonly class="input-bg w-full h-64 p-4 rounded-2xl text-[13px] font-mono" v-model="shareMessage"></textarea>
+                <div class="grid grid-cols-2 gap-3">
+                    <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold">複製文字</button>
+                    <button @click="shareWhatsApp" class="whatsapp-bg py-4 rounded-2xl text-xs font-bold">WhatsApp</button>
+                </div>
+            </div>
+        </div>
+
         <div v-if="previewImg" class="fixed inset-0 bg-black/85 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
             <div class="w-full max-w-sm flex flex-col items-center">
-                <img :src="previewImg" class="max-w-full rounded-2xl shadow-2xl border border-white/10 mb-8">
+                <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-2xl border border-white/10 mb-8">
                 <div class="grid grid-cols-2 gap-4 w-full">
-                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold">下載圖片</button>
-                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold shadow-lg">分享圖片</button>
+                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold active:scale-95 flex items-center justify-center gap-2">
+                        <i class="fas fa-download text-emerald-500"></i> 下載圖片
+                    </button>
+                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold active:scale-95 flex items-center justify-center gap-2 shadow-lg">
+                        <i class="fas fa-share-nodes"></i> 分享圖片
+                    </button>
                 </div>
+                <p class="text-white/40 text-[10px] mt-6 uppercase tracking-widest font-bold">或長按圖片儲存分享</p>
                 <button @click="previewImg = null" class="mt-8 text-emerald-500 text-xs font-bold underline">返回編輯</button>
             </div>
+        </div>
+
+        <div v-if="expenses.length > 0 && !isExporting" class="px-4 text-center">
+            <button @click="clearAll" class="text-red-500/30 hover:text-red-500 text-[10px] font-bold uppercase py-2">清除所有紀錄</button>
         </div>
     </div>
 </div>
@@ -168,7 +199,7 @@ createApp({
                 const res = await fetch(`https://open.er-api.com/v6/latest/${form.value.currency}`);
                 const data = await res.json();
                 currentRate.value = data.rates.HKD || 1;
-                manualRate.value = currentRate.value;
+                if(rateMode.value === 'live') manualRate.value = currentRate.value;
             } catch (e) { currentRate.value = 1; }
         };
 
@@ -183,81 +214,84 @@ createApp({
 
         const addExpense = () => {
             if (!form.value.item || !form.value.amount || !form.value.payer) return alert("填寫完整資料");
+            const rateToUse = (form.value.currency === 'HKD') ? 1 : (rateMode.value === 'live' ? currentRate.value : manualRate.value);
             expenses.value.unshift({ 
-                id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, 
-                rateUsed: currentRate.value, involved: [...form.value.involved] 
+                id: Date.now(), ...form.value, hkd: form.value.amount * rateToUse, 
+                rateUsed: rateToUse, involved: [...form.value.involved] 
             });
             form.value.item = ""; form.value.amount = "";
         };
 
+        const startEdit = (i) => {
+            isEditing.value = true; editIndex.value = i;
+            form.value = JSON.parse(JSON.stringify(expenses.value[i]));
+            window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
+        };
+
+        const saveEdit = () => {
+            const rateToUse = (form.value.currency === 'HKD') ? 1 : (rateMode.value === 'live' ? currentRate.value : manualRate.value);
+            expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * rateToUse, rateUsed: rateToUse };
+            isEditing.value = false; form.value.item = ""; form.value.amount = "";
+        };
+
         const generateImage = async () => {
             isExporting.value = true;
-            // 給予一點時間讓 DOM 狀態切換
             setTimeout(async () => {
                 const element = document.getElementById('capture-zone');
                 try {
                     const canvas = await html2canvas(element, { 
                         backgroundColor: '#121212', 
-                        scale: 3, // 提高縮放倍率以增加文字清晰度
-                        useCORS: true,
-                        allowTaint: true,
-                        scrollX: 0,
-                        scrollY: -window.scrollY,
-                        onclone: (doc) => {
-                            // 修正文字被切斷：在克隆的 DOM 中強制調整樣式
-                            const items = doc.querySelectorAll('.item-title');
-                            items.forEach(el => {
-                                el.style.overflow = 'visible';
-                                el.style.whiteSpace = 'normal';
-                                el.style.display = 'block';
-                                el.style.color = '#ffffff';
-                            });
-                        }
+                        scale: 2,
+                        useCORS: true
                     });
                     previewImg.value = canvas.toDataURL('image/png');
                 } catch (err) { alert("截圖失敗"); }
                 isExporting.value = false;
-            }, 400);
+            }, 300);
         };
 
         const downloadImage = () => {
             const link = document.createElement('a');
-            link.download = `MathGod_Result_${Date.now()}.png`;
+            link.download = `MathGod_Settlement_${new Date().getTime()}.png`;
             link.href = previewImg.value;
             link.click();
         };
 
         const shareImage = async () => {
-            const res = await fetch(previewImg.value);
-            const blob = await res.blob();
-            const file = new File([blob], 'settlement.png', { type: 'image/png' });
-            if (navigator.share) await navigator.share({ files: [file] });
+            try {
+                const res = await fetch(previewImg.value);
+                const blob = await res.blob();
+                const file = new File([blob], 'settlement.png', { type: 'image/png' });
+                if (navigator.share) await navigator.share({ files: [file], title: '數神結算單' });
+            } catch (err) { alert("分享失敗"); }
         };
 
+        const clearAll = () => { if(confirm("確定清空紀錄？")) expenses.value = []; };
+
         const settlements = computed(() => {
-            let bal = {}; users.value.forEach(u => bal[u] = 0);
-            expenses.value.forEach(e => {
-                bal[e.payer] += e.hkd;
-                const split = e.hkd / (e.involved.length || 1);
-                e.involved.forEach(p => bal[p] -= split);
+            let balances = {}; users.value.forEach(u => balances[u] = 0);
+            expenses.value.forEach(exp => {
+                balances[exp.payer] += exp.hkd;
+                const split = exp.hkd / (exp.involved.length || 1);
+                exp.involved.forEach(p => { if(balances[p] !== undefined) balances[p] -= split; });
             });
-            let d = [], c = [], res = [];
-            for (let u in bal) {
-                if (bal[u] < -0.01) d.push({n:u, a:Math.abs(bal[u])});
-                if (bal[u] > 0.01) c.push({n:u, a:bal[u]});
+            let debtors = [], creditors = [], res = [];
+            for (let u in balances) {
+                if (balances[u] < -0.01) debtors.push({n:u, a:Math.abs(balances[u])});
+                if (balances[u] > 0.01) creditors.push({n:u, a:balances[u]});
             }
             let i=0, j=0;
-            while(i<d.length && j<c.length){
-                let m = Math.min(d[i].a, c[j].a);
-                res.push({from: d[i].n, to: c[j].n, amount: m});
-                d[i].a -= m; c[j].a -= m;
-                if(d[i].a < 0.01) i++; if(c[j].a < 0.01) j++;
+            while(i<debtors.length && j<creditors.length){
+                let m = Math.min(debtors[i].a, creditors[j].a);
+                res.push({from: debtors[i].n, to: creditors[j].n, amount: m});
+                debtors[i].a -= m; creditors[j].a -= m;
+                if(debtors[i].a < 0.01) i++; if(creditors[j].a < 0.01) j++;
             }
             return res;
         });
 
         const shareMessage = computed(() => {
-            let msg = `⚡️ 【數神】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n找數：\n`;
+            let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n找數：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
             return msg;
         });
@@ -274,8 +308,10 @@ createApp({
         }, {deep: true});
 
         return { 
-            users, newUser, form, expenses, isExporting, previewImg, showTextShare, shareMessage,
-            addUser, addExpense, startEdit, saveEdit, generateImage, downloadImage, shareImage, settlements,
+            users, newUser, form, expenses, currentRate, manualRate, rateMode, 
+            isEditing, isExporting, previewImg, showTextShare, shareMessage,
+            addUser, addExpense, startEdit, saveEdit, clearAll, 
+            generateImage, downloadImage, shareImage, settlements,
             totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
             fetchRate, removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1),
             copyText:()=>{navigator.clipboard.writeText(shareMessage.value); alert("已複製！")},
