--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>數神 MathGod － 香港人的夾錢APP</title>
+    <title>數神 MathGod</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         [v-cloak] { display: none; }
-        body { background-color: #121212; color: #e5e7eb; -webkit-tap-highlight-color: transparent; font-family: -apple-system, system-ui, sans-serif; }
+        body { background-color: #121212; color: #e5e7eb; font-family: -apple-system, system-ui, sans-serif; }
         .evergreen-gradient { background: linear-gradient(135deg, #059669 0%, #064e3b 100%); }
         .card-bg { background-color: #1e1e1e; border: 1px solid rgba(255,255,255,0.05); }
         .input-bg { background-color: #2d2d2d; border: 1px solid rgba(255,255,255,0.1); color: white; }
@@ -19,11 +19,11 @@
         .tab-inactive { background-color: #2d2d2d; color: #6b7280; }
         .whatsapp-bg { background-color: #25D366; color: white; }
 
-        /* 修復核心：強制所有文字保留渲染緩衝空間，防止 cap 圖切字 */
+        /* 核心修復：增加寬度緩衝，防止中文字被切斷 */
         .fix-render { 
             line-height: 1.5 !important; 
-            padding-right: 2px !important; 
-            display: inline-block; /* 讓寬度計算更準確 */
+            padding-right: 4px !important; 
+            display: inline-block !important;
             vertical-align: middle;
         }
     </style>
@@ -37,12 +37,8 @@
                 <i class="fas fa-bolt mr-1 text-yellow-400"></i>數神
             </h1>
             <div class="flex gap-2">
-                <button @click="showTextShare = true" class="bg-white/10 px-4 py-2 rounded-full border border-white/20 text-[10px] font-bold active:scale-95">
-                    <i class="fas fa-align-left mr-1"></i> 文字Share
-                </button>
-                <button @click="generateImage" class="bg-white/20 px-4 py-2 rounded-full border border-white/30 text-[10px] font-bold active:scale-95">
-                    <i class="fas fa-camera mr-1"></i> 截圖Share
-                </button>
+                <button @click="showTextShare = true" class="bg-white/10 px-4 py-2 rounded-full border border-white/20 text-[10px] font-bold">文字Share</button>
+                <button @click="generateImage" class="bg-white/20 px-4 py-2 rounded-full border border-white/30 text-[10px] font-bold">截圖Share</button>
             </div>
         </div>
     </header>
@@ -64,14 +60,8 @@
         <div id="capture-zone">
             <section v-if="expenses.length > 0" class="bg-emerald-950/20 border border-emerald-900/40 p-6 rounded-[32px] mb-6">
                 <div class="flex justify-between items-end mb-6">
-                    <div>
-                        <h2 class="font-black text-emerald-500 text-xl tracking-tight">最終結算</h2>
-                        <p class="text-[10px] text-gray-500">Settlement</p>
-                    </div>
-                    <div class="text-right font-mono font-bold text-emerald-500 text-lg">
-                        <span class="text-[10px] text-gray-600 block uppercase">Total Spent</span>
-                        HK${{ totalSpent.toFixed(1) }}
-                    </div>
+                    <div><h2 class="font-black text-emerald-500 text-xl tracking-tight">最終結算</h2><p class="text-[10px] text-gray-500">Settlement</p></div>
+                    <div class="text-right font-mono font-bold text-emerald-500 text-lg">HK${{ totalSpent.toFixed(1) }}</div>
                 </div>
                 <div class="space-y-3">
                     <div v-for="(s, i) in settlements" :key="i" class="bg-black/40 border border-white/5 flex items-center justify-between p-4 rounded-2xl">
@@ -106,20 +96,15 @@
 
         <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5">
             <div class="space-y-5">
-                <input v-model="form.item" type="text" placeholder="項目 (如: 吃香蕉)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
+                <input v-model="form.item" type="text" placeholder="項目" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
                 <div class="flex gap-2">
                     <select v-model="form.currency" @change="fetchRate" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
                         <option value="HKD">🇭🇰 HKD</option>
                         <option value="JPY">🇯🇵 JPY</option>
                         <option value="TWD">🇹🇼 TWD</option>
                         <option value="CNY">🇨🇳 CNY</option>
-                        <option value="THB">🇹🇭 THB</option>
-                        <option value="KRW">🇰🇷 KRW</option>
-                        <option value="USD">🇺🇸 USD</option>
-                        <option value="GBP">🇬🇧 GBP</option>
-                        <option value="EUR">🇪🇺 EUR</option>
                     </select>
-                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold outline-none">
+                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold">
                 </div>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
@@ -138,40 +123,25 @@
                         </div>
                     </div>
                 </div>
-                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl active:scale-95 transition-all text-sm uppercase tracking-widest">
+                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl text-sm uppercase tracking-widest">
                     {{ isEditing ? '儲存修改' : '確認記帳' }}
                 </button>
             </div>
         </section>
 
-        <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
-            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl">
-                <h3 class="font-black text-emerald-500 text-sm">文字結算</h3>
-                <textarea readonly class="input-bg w-full h-64 p-4 rounded-2xl text-[13px] font-mono" v-model="shareMessage"></textarea>
-                <div class="grid grid-cols-2 gap-3">
-                    <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold">複製文字</button>
-                    <button @click="shareWhatsApp" class="whatsapp-bg py-4 rounded-2xl text-xs font-bold font-bold">WhatsApp</button>
-                </div>
-            </div>
-        </div>
-
         <div v-if="previewImg" class="fixed inset-0 bg-black/85 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
             <div class="w-full max-w-sm flex flex-col items-center">
                 <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-2xl border border-white/10 mb-8">
                 <div class="grid grid-cols-2 gap-4 w-full">
-                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold active:scale-95 flex items-center justify-center gap-2">
-                        <i class="fas fa-download text-emerald-500"></i> 下載圖片
-                    </button>
-                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold active:scale-95 flex items-center justify-center gap-2 shadow-lg">
-                        <i class="fas fa-share-nodes"></i> 分享圖片
-                    </button>
+                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold">下載圖片</button>
+                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold shadow-lg">分享圖片</button>
                 </div>
                 <button @click="previewImg = null" class="mt-8 text-emerald-500 text-xs font-bold underline">返回編輯</button>
             </div>
         </div>
-        
+
         <div v-if="expenses.length > 0 && !isExporting" class="px-4 text-center">
-            <button @click="clearAll" class="text-red-500/30 hover:text-red-500 text-[10px] font-bold uppercase py-2">清除所有紀錄</button>
+            <button @click="clearAll" class="text-red-500/30 text-[10px] font-bold uppercase py-2">清除所有紀錄</button>
         </div>
     </div>
 </div>
@@ -181,10 +151,8 @@ const { createApp, ref, computed, watch, onMounted } = Vue;
 createApp({
     setup() {
         const users = ref([]); const newUser = ref(""); const expenses = ref([]);
-        const currentRate = ref(1); const manualRate = ref(1); const rateMode = ref('live');
-        const isEditing = ref(false); const editIndex = ref(null);
-        const isExporting = ref(false); const previewImg = ref(null);
-        const showTextShare = ref(false);
+        const currentRate = ref(1); const isEditing = ref(false); const editIndex = ref(null);
+        const isExporting = ref(false); const previewImg = ref(null); const showTextShare = ref(false);
         const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
 
         const fetchRate = async () => {
@@ -193,38 +161,27 @@ createApp({
                 const res = await fetch(`https://open.er-api.com/v6/latest/${form.value.currency}`);
                 const data = await res.json();
                 currentRate.value = data.rates.HKD || 1;
-                if(rateMode.value === 'live') manualRate.value = currentRate.value;
             } catch (e) { currentRate.value = 1; }
         };
 
         const addUser = () => {
             const n = newUser.value.trim();
-            if (n && !users.value.includes(n)) { 
-                users.value.push(n); form.value.involved.push(n); 
-                if(!form.value.payer) form.value.payer = n; 
-                newUser.value = ""; 
-            }
+            if (n && !users.value.includes(n)) { users.value.push(n); form.value.involved.push(n); if(!form.value.payer) form.value.payer = n; newUser.value = ""; }
         };
 
         const addExpense = () => {
             if (!form.value.item || !form.value.amount || !form.value.payer) return alert("填寫完整資料");
-            const rateToUse = (form.value.currency === 'HKD') ? 1 : (rateMode.value === 'live' ? currentRate.value : manualRate.value);
-            expenses.value.unshift({ 
-                id: Date.now(), ...form.value, hkd: form.value.amount * rateToUse, 
-                rateUsed: rateToUse, involved: [...form.value.involved] 
-            });
+            expenses.value.unshift({ id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, involved: [...form.value.involved] });
             form.value.item = ""; form.value.amount = "";
         };
 
         const startEdit = (i) => {
             isEditing.value = true; editIndex.value = i;
             form.value = JSON.parse(JSON.stringify(expenses.value[i]));
-            window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
         };
 
         const saveEdit = () => {
-            const rateToUse = (form.value.currency === 'HKD') ? 1 : (rateMode.value === 'live' ? currentRate.value : manualRate.value);
-            expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * rateToUse, rateUsed: rateToUse };
+            expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value };
             isEditing.value = false; form.value.item = ""; form.value.amount = "";
         };
 
@@ -233,33 +190,21 @@ createApp({
             setTimeout(async () => {
                 const element = document.getElementById('capture-zone');
                 try {
-                    const canvas = await html2canvas(element, { 
-                        backgroundColor: '#121212', 
-                        scale: 2,
-                        logging: false,
-                        useCORS: true
-                    });
+                    const canvas = await html2canvas(element, { backgroundColor: '#121212', scale: 2, useCORS: true });
                     previewImg.value = canvas.toDataURL('image/png');
                 } catch (err) { alert("截圖失敗"); }
                 isExporting.value = false;
             }, 300);
         };
 
-        const downloadImage = () => {
-            const link = document.createElement('a');
-            link.download = `MathGod_${new Date().getTime()}.png`;
-            link.href = previewImg.value;
-            link.click();
+        const downloadImage = () => { const link = document.createElement('a'); link.download = `MathGod.png`; link.href = previewImg.value; link.click(); };
+        const shareImage = async () => {
+            const res = await fetch(previewImg.value); const blob = await res.blob();
+            const file = new File([blob], 'settlement.png', { type: 'image/png' });
+            if (navigator.share) await navigator.share({ files: [file] });
         };
 
-        const shareImage = async () => {
-            try {
-                const res = await fetch(previewImg.value);
-                const blob = await res.blob();
-                const file = new File([blob], 'settlement.png', { type: 'image/png' });
-                if (navigator.share) await navigator.share({ files: [file] });
-            } catch (err) { alert("分享失敗"); }
-        };
+        const clearAll = () => { if(confirm("確定清空紀錄？")) expenses.value = []; };
 
         const settlements = computed(() => {
             let balances = {}; users.value.forEach(u => balances[u] = 0);
@@ -268,43 +213,36 @@ createApp({
                 const split = exp.hkd / (exp.involved.length || 1);
                 exp.involved.forEach(p => { if(balances[p] !== undefined) balances[p] -= split; });
             });
-            let debtors = [], creditors = [], res = [];
+            let d = [], c = [], res = [];
             for (let u in balances) {
-                if (balances[u] < -0.01) debtors.push({n:u, a:Math.abs(balances[u])});
-                if (balances[u] > 0.01) creditors.push({n:u, a:balances[u]});
+                if (balances[u] < -0.01) d.push({n:u, a:Math.abs(balances[u])});
+                if (balances[u] > 0.01) c.push({n:u, a:balances[u]});
             }
             let i=0, j=0;
-            while(i<debtors.length && j<creditors.length){
-                let m = Math.min(debtors[i].a, creditors[j].a);
-                res.push({from: debtors[i].n, to: creditors[j].n, amount: m});
-                debtors[i].a -= m; creditors[j].a -= m;
-                if(debtors[i].a < 0.01) i++; if(creditors[j].a < 0.01) j++;
+            while(i<d.length && j<c.length){
+                let m = Math.min(d[i].a, c[j].a);
+                res.push({from: d[i].n, to: c[j].n, amount: m});
+                d[i].a -= m; c[j].a -= m;
+                if(d[i].a < 0.01) i++; if(c[j].a < 0.01) j++;
             }
             return res;
         });
 
         const shareMessage = computed(() => {
-            let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n找數：\n`;
+            let msg = `⚡️ 【數神】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n找數：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
             return msg;
         });
 
         onMounted(() => {
             const saved = localStorage.getItem('mathgod_v54_data');
-            if (saved) { 
-                const d = JSON.parse(saved); 
-                users.value = d.users || []; expenses.value = d.expenses || []; 
-            }
+            if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; }
         });
-        watch([users, expenses], () => {
-            localStorage.setItem('mathgod_v54_data', JSON.stringify({ users: users.value, expenses: expenses.value }));
-        }, {deep: true});
+        watch([users, expenses], () => { localStorage.setItem('mathgod_v54_data', JSON.stringify({ users: users.value, expenses: expenses.value })); }, {deep: true});
 
         return { 
-            users, newUser, form, expenses, currentRate, manualRate, rateMode, 
-            isEditing, isExporting, previewImg, showTextShare, shareMessage,
-            addUser, addExpense, startEdit, saveEdit, clearAll, 
-            generateImage, downloadImage, shareImage, settlements,
+            users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage,
+            addUser, addExpense, startEdit, saveEdit, clearAll, generateImage, downloadImage, shareImage, settlements,
             totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
             fetchRate, removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1),
             copyText:()=>{navigator.clipboard.writeText(shareMessage.value); alert("已複製！")},
